fix headings and spans letter spacing

--- a/src/App.scss
+++ b/src/App.scss
@@ -9,6 +9,11 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
   margin: 0;
+  letter-spacing: 0.8px;
+}
+
+span {
+  letter-spacing: 0.8px;
 }
 
 .App {
