--- a/src/components/SongItem.module.scss
+++ b/src/components/SongItem.module.scss
@@ -22,6 +22,7 @@
 
   div {
     font-weight: 700;
+    font-size: 13px;
   }
 
   div:nth-of-type(1) {
