--- a/src/pages/LandingPage.module.scss
+++ b/src/pages/LandingPage.module.scss
@@ -36,8 +36,13 @@
         font-weight: 700;
       }
 
+      h3:nth-of-type(2) {
+        font-weight: 900;
+      }
+
       span {
         margin-left: 6px;
+        font-weight: 900;
         cursor: pointer;
       }
     }
